--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
         "react-dom": "^16.12.0",
         "webpack": "^4.5.0",
         "webpack-cli": "^3.2.1"
-    }
+    },
+    "dependencies": {}
 }
