--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
         "webpack": "^4.5.0",
         "webpack-cli": "^3.2.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "styled-components": "^5.0.1"
+    }
 }
